# vm_bridge

./: Cargo.toml  README.md  config.toml  config.toml.template
src/: config.rs  lib.rs  models.rs  open_url.rs
vm_bridge/src/: config.rs  lib.rs  open_url.rs
vm_bridge_client/: Cargo.toml
vm_bridge_linux_client/: Cargo.toml
vm_bridge_linux_client_gui/: Cargo.toml
vm_bridge_linux_client_gui/src/: commands.rs  main.rs
vm_bridge_linux_server/: Cargo.toml
vm_bridge_linux_server/src/: main.rs
vm_bridge_server/: Cargo.toml
