[package]
name = "vm_bridge_linux_client_gui"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm_bridge = { path = "../vm_bridge" }

anyhow = "1.0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"
toml = "0.5.8"
url = "2.2.2"
flexi_logger = "0.21.0"
log = "0.4.14"
iced = { version = "0.3.0", features = ["tokio"] }
reqwest = { version = "0.11.7", features = ["json"] }
